fix expanded menu z-index

--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -64,7 +64,7 @@ nav{
     }
 
     .navItem{
-        margin: 5px 15px;
+        margin: 10px 15px;
     }
 
     .navIcon{
@@ -83,8 +83,9 @@ nav{
         background-color: var(--background);
         display: flex;
         position: absolute;
+        z-index: 1;
         top: 52px;
         right: 0px;
-        gap: 5px;
+        gap: 2px;
     }
 }
